--- a/CSS/validator/validator.css
+++ b/CSS/validator/validator.css
@@ -16,6 +16,9 @@
             text-align: center;
             width: 350px;
             box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.29);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
         input[type="password"],
         input[type="text"] {
@@ -38,8 +41,8 @@
         }
         #btn_validate:hover{
             background-color: #4b4b4b;
-            color: white;
-            transform: scale(1.1);
+            color: whi
+          /* transform: scale(1.1);*/
         }
         .toggle_password {
             position: absolute;
@@ -52,4 +55,13 @@
         .inputs{
             position: relative;
             width: 100%;
+        }
+        a{
+            text-decoration: none;
+            color: #888;
+        }
+
+        a:hover{
+            color: #88888866;
+            text-decoration: double;
         }
